--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://criptocratia.github.io/Cryptocratia/'
 languageCode = 'en-en'
 title = 'Cryptocrația'
 theme = 'typo'
