--- a/hugo.toml
+++ b/hugo.toml
@@ -38,11 +38,11 @@ breadcrumbs = true
 # Main menu pages
 [[params.menu]]
 name = "Prima Pagină"
-url = "Cryptocratia/"
+url = "/"
 
 [[params.menu]]
 name = "Postări"
-url = "Cryptocratia/posts"
+url = "/posts"
 
 [permalinks]
   posts = "/:year/:month/:title/"
